ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0, 6.0.17
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • v6.0
    • Execution Team 2023-03-20
    • 135
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This is similar to SERVER-55173 but it's occurring on the RandomCursor which isn't managed by WiredTigerSession. During shutdown and after WiredTiger has already shut down, the RandomCursor destructor attempts to call WT_CURSOR::close() and hits a segmentation fault.

            Assignee:
            Nic Hollingum
            Reporter:
            Gregory Wlodarek
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: