SERVER-74710 Reduce race with storage engine shutdown and RandomCursor destructor